# MFC_MyCtrl

./: CMakeLists.txt  MyCtrl.cpp  MyCtrl.h  README.md  Resource.h  ctrl.aps  ctrl.cpp  ctrl.h  ctrl.rc  ctrlDlg.cpp  ctrlDlg.h  stdafx.cpp
res/: ctrl.rc2
